objects/Case.object
<CustomObject>
    <fields>
        <fullName>FINS_CommercialBanking_TechEmail__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_TechContact__r.Email</formula>
        <inlineHelpText>Technical Contact Email is pulled from the related Technical Contact record.</inlineHelpText>
        <label>Technical Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TechEntitle__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select the user access and entitlements for the previously selected Technical Contact.</inlineHelpText>
        <label>Technical Contact Entitlements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full</fullName>
                </value>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Setup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TechPhone__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_TechContact__r.Phone</formula>
        <inlineHelpText>Technical Contact Phone is pulled from the related Technical Contact record.</inlineHelpText>
        <label>Technical Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TechTitle__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>FINS_CommercialBanking_TechContact__r.Title</formula>
        <inlineHelpText>Technical Contact Title is pulled from the related Technical Contact record.</inlineHelpText>
        <label>Technical Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TopApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select a contact from the client to be the top level approver.</inlineHelpText>
        <label>Assign Top Level Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cases (Assign Ultimate Approver)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TreasMgmtOps__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select a user from the list.</inlineHelpText>
        <label>Treasury Management Operations</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_TreasMgmtRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select a user from the list.</inlineHelpText>
        <label>Treasury Management Rep.</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_CommercialBanking_WireTransfers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Check to select the Wire Transfer services.</inlineHelpText>
        <label>Wire Transfer Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Commercial_Banking_TaxID__c</fullName>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <formula>Account.INS_FEIN_Tax_ID__c</formula>
        <inlineHelpText>Tax ID is pulled from the related Account record.</inlineHelpText>
        <label>FEIN/Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Dispute_Reasoning__c</fullName>
        <label>Dispute Reasoning</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>The charges were not made by me/a person authorized by me</fullName>
                </value>
                <value>
                    <fullName>The transaction is mine, but I dispute it</fullName>
                </value>
                <value>
                    <fullName>I asked the merchant for a credit adjustment, but unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Fraud_Transaction__c</fullName>
        <description>Fraud for Retail</description>
        <label>Fraud Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Live_Chat_Transcript__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Chat Transcript</label>
        <referenceTo>LiveChatTranscript</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FINS_Order_Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Order Dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Provisioned_Amount__c</fullName>
        <description>Used for RegE</description>
        <label>Provisioned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <description>Field choice selection indicates that the corresponding record is referenced in one or more official Q-Branch demo guides.</description>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINS_Recurring_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Recurring Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Requested_Amount__c</fullName>
        <description>Used for provisional credit. Used for RegE</description>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FINS_Subscription_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Subscription Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Suspicious_Activity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Suspicious Activity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FINS_Treasury_Management_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>FINS Commercial Banking Treasury Management Implementation use case</description>
        <inlineHelpText>Select a user from the list.</inlineHelpText>
        <label>Treasury Management Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Favorite_Color__c</fullName>
        <description>Temp field</description>
        <label>Favorite Color</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <description>Fee Waiver - Amount Requested</description>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__Household__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Household</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Household Cases</relationshipLabel>
        <relationshipName>HouseholdCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Deal</label>
        <referenceTo>FinancialDeal</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Contact_Close__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove. Used to mark cases that are closed on first contact, without requiring additional engagement with the customer.  Off by default.  Driven by workflow rule.</description>
        <label>First Contact Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Charge_Date__c</fullName>
        <description>Fraud for Retail</description>
        <label>Fraud Charge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fraud_Transaction__c</fullName>
        <description>Fraud for Retail</description>
        <label>Fraud Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Claim_NBA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Claim NBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>INS_NewRate__c</fullName>
        <description>Used in the MuleSoft address change demo</description>
        <label>NewRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KB_Article_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked when there is a KB Article attached to the Case.</description>
        <inlineHelpText>Checked when there is a KB Article attached to the Case.</inlineHelpText>
        <label>KB Article Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastStatementToReported__c</fullName>
        <description>For RegE. The delta between the last statement date as of the investigation date, and the investigation date, in days.</description>
        <inlineHelpText>The delta between the last statement date as of the investigation date, and the investigation date, in days.</inlineHelpText>
        <label>Last Statement to Reported (Days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Network_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for RegE</description>
        <label>Network Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewRate__c</fullName>
        <label>NewRate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notification_Date__c</fullName>
        <label>Notification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Offer_Voucher__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Offer Voucher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity</relationshipLabel>
        <relationshipName>R00N4S000002Z5GTUA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Dispute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Order Dispute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIN_Information__c</fullName>
        <description>Used for RegE</description>
        <label>PIN Information</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Same</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family_KB__c</fullName>
        <description>What: Used by the Analytics Demo Data Tool. Do Not Remove.</description>
        <label>Product Family</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial_Products</fullName>
                    <label>Commercial Products</label>
                </value>
                <value>
                    <fullName>Residential Products</fullName>
                </value>
                <value>
                    <fullName>Turbine</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisional_Status__c</fullName>
        <description>For the RegE Demo</description>
        <label>Provisional Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Waiting Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provisioned_Amount__c</fullName>
        <description>Used for RegE</description>
        <label>Provisioned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ready_for_EI_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ready for EI Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Fee_Waiver__c</fullName>
        <description>Fee Waiver picklist</description>
        <label>Reason for Fee Waiver</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Hardship</fullName>
                </value>
                <value>
                    <fullName>Bank Error</fullName>
                </value>
                <value>
                    <fullName>Unforeseen Circumstances</fullName>
                </value>
                <value>
                    <fullName>Fraudulent Activity</fullName>
                </value>
                <value>
                    <fullName>Customer Dissatisfaction</fullName>
                </value>
                <value>
                    <fullName>Late Transaction Posting</fullName>
                </value>
                <value>
                    <fullName>Billing Discrepancy</fullName>
                </value>
                <value>
                    <fullName>Overlooked Account Limitations</fullName>
                </value>
                <value>
                    <fullName>Account Compromise</fullName>
                </value>
                <value>
                    <fullName>Incorrect Fee Calculation</fullName>
                </value>
                <value>
                    <fullName>Waiver Policy Exception</fullName>
                </value>
                <value>
                    <fullName>Loyalty Program Benefit</fullName>
                </value>
                <value>
                    <fullName>Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>Customer Retention Effort</fullName>
                </value>
                <value>
                    <fullName>Promotional Offer</fullName>
                </value>
                <value>
                    <fullName>Other (Allow customer to provide additional details)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Charge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fraud for Retail</description>
        <label>Recurring Charge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Method__c</fullName>
        <description>Used for RegE</description>
        <label>Request Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oral</fullName>
                </value>
                <value>
                    <fullName>In Writing</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_Amount__c</fullName>
        <description>Used for provisional credit. Used for RegE</description>
        <label>Requested Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Time_mins__c</fullName>
        <label>Response Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Article_Helpful_Reason__c</fullName>
        <label>Article Helpful Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Article_Helpful__c</fullName>
        <label>Article Helpful</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Einstein_Discovery_Leading_Causes__c</fullName>
        <description>What: Used in Einstein Discovery Apex classes</description>
        <label>ED Leading Causes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_Einstein_Discovery_Outcome__c</fullName>
        <description>What: Used in Einstein Discovery Apex classes</description>
        <label>ED Predicted CSAT</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Einstein_Discovery_Prescription__c</fullName>
        <description>What: Used in Einstein Discovery Apex classes</description>
        <label>ED Prescription</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>SDO_OMS_Order_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Lookup to Order Summary Object</description>
        <label>Order Summary</label>
        <referenceTo>OrderSummary</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Quality_Score__c</fullName>
        <description>What: This field is used by the &quot;Quality Score by Agent&quot; component on the Service Executive Dashboard.  It indicates the &quot;quality&quot;--typically a post-call assessment by supervisor or quality-control personnel--that has been awarded to a case.  This is a number field, manually updated, but it could be accessed by a quality control system.</description>
        <label>Quality Score</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_City__c</fullName>
        <description>What: SFS/FSL Field for cases.</description>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Country__c</fullName>
        <description>What: used by FSL/SFS team for location</description>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_State__c</fullName>
        <description>What: SFS Field for location</description>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Street__c</fullName>
        <description>What: SFS Field for Location</description>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: SFS Field for Work Type Lookup</description>
        <label>Work Type</label>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Zip__c</fullName>
        <description>What: Used by SFS for Cases</description>
        <label>Zip</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Servcie_Response_Time_mins__c</fullName>
        <description>What: Used in reports</description>
        <label>Response Time (mins)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Article_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: Helper field for KCS Create Article flow and Next Best Action recommendation. Flag set to True during the KCS Create Article flow, and referenced in the Simple NBA strategy to determine whether or not to offer up the Create Article recommendation.</description>
        <inlineHelpText>Article created using the Create Article flow through either the dynamic button or the Next Best Action recommendation</inlineHelpText>
        <label>Article Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Channel__c</fullName>
        <description>What: Displays an image for the channel the case came from.</description>
        <formula>IMAGE( CASE( Origin, 
&quot;Phone&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Phone.png&quot;, 
&quot;Email&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Email.png&quot;, 
&quot;Chat&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Chat.png&quot;, 
&quot;Website&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Web.png&quot;, 
&quot;Web&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Web.png&quot;,  
&quot;Community&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Community.png&quot;, 
&quot;Mobile Device&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Mobile.png&quot;, 
&quot;Q&amp;A&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Automatic.png&quot;, 
&quot;Facebook&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Facebook.png&quot;, 
&quot;Twitter&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Twitter.png&quot;, 
&quot;Google&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Google.png&quot;, 
&quot;Instagram&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Instagram.png&quot;, 
&quot;LinkedIn&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_LinkedIn.png&quot;, 
&quot;Text&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_SMS.png&quot;, 
&quot;SMS&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_SMS.png&quot;, 
&quot;Slack&quot;, &quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/icon_slack.png&quot;,

&quot;https://sdo-master.s3.us-west-1.amazonaws.com/service/icons/Icon_Channel_Automatic.png&quot; ),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_ChatKey__c</fullName>
        <description>What: Einstein Chatbot uses this to store LiveAgentSessId and is also referenced by trigger on Live Chat Transcript records.Who: Service Team</description>
        <label>ChatKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Close_Summary__c</fullName>
        <description>What: Short summary of actions taken to resolve the Case. Used in KCS Flows</description>
        <inlineHelpText>Short summary of actions taken to resolve the Case.</inlineHelpText>
        <label>Close Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Contact_Reason__c</fullName>
        <description>Who: Katie Gannon What: The customer contact reason drafted by Einstein at the end of a conversation between agent and customer. Used in Einstein Work Summaries</description>
        <inlineHelpText>The customer contact reason.</inlineHelpText>
        <label>Contact Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Cost__c</fullName>
        <description>What: used in reports</description>
        <formula>Case ( Origin, &apos;Phone&apos;, 3.5, &apos;Chat&apos;, 2, &apos;Email&apos;, 2, &apos;Website&apos;, 1.5, &apos;Portal&apos;, 1.5, &apos;Chatter Answer&apos;, 1.2, 1.75)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Customer_Type__c</fullName>
        <description>What: Used in Case Wrapup</description>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Small and Medium Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Duration__c</fullName>
        <description>What: used in many reports for case duration</description>
        <formula>8*(IF( ISNULL( DateTime_Closed_c__c  ), NOW() -  DateTime_Opened_c__c ,  DateTime_Closed_c__c  -  DateTime_Opened_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Est_Cost__c</fullName>
        <description>What: Estimated cost to perform the service tasks.</description>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SDO_Service_NBA_to_Display__c</fullName>
        <description>What: Used to hardcode an NBA to display</description>
        <label>NBA to Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Resolution__c</fullName>
        <description>Who: Katie Gannon What: The customer contact outcome drafted by Einstein at the end of a conversation between agent and customer. Used in Einstein Work Summaries</description>
        <inlineHelpText>The customer contact outcome.</inlineHelpText>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_SLA_Compliant__c</fullName>
        <defaultValue>true</defaultValue>
        <description>What: This field is used by the &quot;SLA Compliance&quot; dashboard on the Service Executive dashboard.  It is checked by default, and unchecked when a case misses a milestone.</description>
        <label>SLA Compliant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_SLA_Type__c</fullName>
        <description>What: Created for use by Service Wave to segment cases by SLA.  Entitlements field now accessible to Wave.</description>
        <label>SLA Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SDO_Service_Send_Email_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>What: used in the Customer Troubleshoot flow</description>
        <label>Send Email Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Surveys_Comment__c</fullName>
        <description>Holds any comments text from the customer responding to Salesforce Surveys</description>
        <label>Survey Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Surveys_NPS__c</fullName>
        <label>Survey NPS</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>What: Service Territory Lookup</description>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SDO_Service_Urgency__c</fullName>
        <description>What: Used in multiple reports for case urgency.</description>
        <formula>IMAGE( SDO_URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Priority, 
&quot;Critical&quot;, &quot;015Hr000004ZYx8&amp;oid=&quot;&amp;$Organization.Id, 
&quot;High&quot;, &quot;015Hr000004ZYx9&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Medium&quot;, &quot;015Hr000004ZYxA&amp;oid=&quot;&amp;$Organization.Id, 
&quot;Low&quot;, &quot;015Hr000004ZYxB&amp;oid=&quot;&amp;$Organization.Id, 
&quot;015Hr000004ZYxB&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Urgency</label>
        <type>Text</type>
    </fields>
</CustomObject>